--- a/tela_login/login_style.css
+++ b/tela_login/login_style.css
@@ -141,6 +141,7 @@ input{
     height: 5.8vh;
     border-radius: 15px;
     padding: 1.95vh 19.3vw 1.95vh 1.73vw;
+    border-style: none;
 }
 
 .imgCampo{
@@ -158,4 +159,5 @@ input{
     background-color: #d9d9d9;
     color: #222E50;
     margin-bottom: 4.97vh;
+    border-style: none;
 }
