--- a/tela_rec/rec_style.css
+++ b/tela_rec/rec_style.css
@@ -62,12 +62,14 @@ body {
     border-radius: 16px;
     padding: 1.5vh 1.5vw;
     font-weight: bold;
+    font-family: 'Inter';
 }
 
 .criarConta{
     color: #222E50;
     font-weight: bold;
     margin-right: 1vw;
+    font-family: 'Inter';
 }
 
 
@@ -172,4 +174,12 @@ a {
     line-height: auto;
     color: #FFFFFF;
     opacity: .70;
+}
+
+#divText {
+    margin-top: 2.17vh;
+    width: 27.85vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
