--- a/css/login_style.css
+++ b/css/login_style.css
@@ -1,3 +1,5 @@
+@import "../css/header_style.css";
+
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
 
 
@@ -5,67 +7,14 @@
 margin: 0;
 box-sizing: border-box;
 } 
-/*
-Ta certo
-*/
+
 a{
     text-decoration: none;
-}
-
-header{
-    width: 100vw;
-    height: 8vh;
-
-    display: flex;
-
-    align-items: center;
-    justify-content: space-between;
-    padding: 0px 3.33vw;
-
-    background-color: #8BC34A;
 }
 
 body{
     font-family: 'Inter', sans-serif;
 }
-
-.cjrLogoHeader{
-    background-color: #d9d9d9;
-    height: 5vh;
-    width: 9vw;
-
-    border-radius: 16px;
-    /* Usado para posicionar obejtos */
-    display: flex;
-    /* coloca os objetos verticalmente no centro */
-    align-items: center;
-    /* coloca os objetos horizontalmente no centro */
-    justify-content: center;
-}
-
-
-.cjrLogoHeaderImg{
-    width: 4vw;
-    height: 3.5 vh;
-    margin: auto;
-    padding: 0.5vh 0px 0px 0px;
-}
-
-
-.entrar{
-    background-color: #222E50;
-    color: #FFFFFF;
-    border-radius: 16px;
-    padding: 1.5vh 1.5vw;
-    font-weight: bold;
-}
-
-.criarConta{
-    color: #222E50;
-    font-weight: bold;
-    margin-right: 1vw;
-}
-
 
 main{
     box-sizing: border-box;
@@ -77,7 +26,6 @@ main{
     border: 1px solid #000000;
     padding: 14vh 31vw 19vh 31vw;
 }
-
 
 .divLogin{
     width: 38vw;
