--- a/css/perfil_usuario_style.css
+++ b/css/perfil_usuario_style.css
@@ -1,16 +1,26 @@
 @import "../css/header_style.css";
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 :root {
   --background-color: #111e3e;
   --border-color: #7e7e7e;
   --Post_background-color: #222e50;
   --font-color: #ffffff;
+  --font-color-date: #71767b;
+}
+
+img {
+  -webkit-user-drag: none;
 }
 
 body {
+  font-family: Inter;
+  font-style: normal;
+  line-height: normal;
   margin: 0;
   width: 100vw;
   background: var(--background-color);
+  overflow: hidden;
 }
 
 main {
@@ -52,7 +62,7 @@ main {
 }
 
 .profile_content {
-  height: 76.64vh;
+  height: 76.83vh;
   display: flex;
   flex-direction: column;
   border-right: 0.07vw solid var(--border-color);
@@ -60,12 +70,10 @@ main {
 }
 
 .user_main_photo {
-  width: 10.42vw;
   height: 14.66vh;
 }
 
 .profile_picture {
-  width: 100%;
   height: 100%;
   flex-shrink: 0;
   border-radius: 50%;
@@ -87,18 +95,84 @@ main {
 
   color: var(--font-color);
   font-size: 1.96vh;
-  font-family: Inter;
-  font-style: normal;
   font-weight: 700;
-  line-height: normal;
 }
 
 .text_icon {
   color: var(--font-color);
   font-size: 1.47vh;
-  font-family: Inter;
-  font-style: normal;
   font-weight: 400;
-  line-height: normal;
   margin-left: 0.9vw;
+}
+
+.posts {
+  display: flex;
+  height: 57.97vh;
+  flex-direction: column;
+  padding: 0 0.56vw 0 0.56vw;
+}
+
+.title {
+  margin-top: 1.56vh;
+  color: var(--font-color);
+  font-size: 1.47vh;
+  font-weight: 800;
+  margin-bottom: 1.56vh;
+}
+
+.post {
+  display: flex;
+  flex-direction: row;
+  margin-top: 1.56vh;
+  width: 43.75vw;
+  background: var(--Post_background-color);
+  border-radius: 3.5vh;
+}
+
+.post_picture {
+  margin-left: 1.67vw;
+  height: 4.69vh;
+  margin-top: 1.37vh;
+}
+
+.post_info {
+  margin-top: 2.74vh;
+  margin-left: 0.76vw;
+  display: flex;
+  flex-direction: column;
+}
+
+.post_header {
+  color: var(--font-color-date);
+  font-size: 1.47vh;
+  font-weight: 500;
+}
+
+.post_name_user {
+  color: var(--font-color);
+  font-weight: 700;
+}
+
+.post_content {
+  display: flex;
+  flex-direction: column;
+  margin-top: 1.74vh;
+  color: var(--font-color);
+  font-size: 1.47vh;
+  font-weight: 500;
+}
+
+#post1 {
+  height: 17.79vh;
+}
+
+#post2 {
+  height: 35.39vh;
+  border-radius: 3.5vh 3.5vh 0 0;
+}
+
+.post2_picture {
+  margin-top: 2.25vh;
+  width: 31.6vw;
+  height: 22.58vh;
 }
