--- a/css/header_style.css
+++ b/css/header_style.css
@@ -12,6 +12,33 @@ header {
   background-color: #8bc34a;
 }
 
+.name_header {
+  height: 1.7vh;
+  color: var(--font-color);
+  font-size: 2.14vh;
+  font-weight: 700;
+}
+
+.logged_out_picture {
+  height: 3.62vh;
+  margin-left: 1.25vw;
+}
+
+.user_options {
+  width: 18.54vw;
+  height: 6.4vh;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.logged_picture {
+  height: 6.4vh;
+  border-radius: 50%;
+  flex-shrink: 0;
+  margin-left: 1.11vw;
+}
+
 .semSublinhado {
   text-decoration: none;
 }
