fix: Botão de seleção de gênero e inserção de foto funcionais

--- a/css/cadastro_style.css
+++ b/css/cadastro_style.css
@@ -1,3 +1,4 @@
+@import "../css/style.css";
 @import "../css/header_style.css";
 
 img {
@@ -85,6 +86,7 @@ main {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  position: relative;
 }
 
 #genero_placeholder {
@@ -99,10 +101,36 @@ main {
   line-height: 1.86vh;
 }
 
+#genero_placeholder:hover {
+  cursor: default;
+}
+
 #select {
-  margin-right: 1.39vw;
-  height: 1.76vh;
-  width: 1.25vw;
+  height: 2.56vh;
+}
+
+#select:hover {
+  cursor: pointer;
+}
+
+#drop-down {
+  position: absolute;
+  top: 1.66vh;
+  left: 24.17vw;
+}
+
+.options {
+  list-style: none;
+  border-width: 1px;
+  border-style: ridge;
+  background-color: #d9d9d9;
+  border-color: black;
+  padding: 0.2vh 0.3vw;
+  opacity: 0;
+}
+
+.options:hover {
+  cursor: default;
 }
 
 .campo::placeholder {
