--- a/css/post_aberto.css
+++ b/css/post_aberto.css
@@ -1,8 +1,12 @@
 @import "../css/header_style.css";
 @import "../css/feed_style.css";
+@import "./modal.css";
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
 
+button{
+    cursor: pointer;
+}
 
 *{padding: 0;
     margin: 0;
