Implementação da tela de feed e do perfil do usuário

--- a/css/header_style.css
+++ b/css/header_style.css
@@ -40,6 +40,10 @@ header {
   margin-left: 1.11vw;
 }
 
+.logged_picture:hover {
+  cursor: pointer;
+}
+
 .semSublinhado {
   text-decoration: none;
 }
